--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,9 @@
-html, body {
+html {
+    margin: 0;
+    scroll-behavior: smooth;
+}
+
+body {
     margin: 0;
 
     font-family: 'M PLUS 1p', sans-serif;
@@ -10,6 +15,8 @@ header {
     background: url("../assets/img/main background.png");
     background-repeat: no-repeat;
     background-size: cover;
+
+    
 }
 
 .header-wrapper {
@@ -284,7 +291,7 @@ header {
 } //subheader-container
 
 main {
-
+    scroll-behavior: smooth;
 } //main
 
 .intro {
